# record

./: .gitignore  Makefile  README.md  pyproject.toml
.awos/commands/: architecture.md  hire.md  implement.md  product.md  roadmap.md  spec.md  tasks.md  tech.md  verify.md
.claude/agents/: macos-swift.md  python-backend.md
.claude/commands/awos/: architecture.md  hire.md  implement.md  product.md  roadmap.md  spec.md  tasks.md  tech.md  verify.md
.claude/skills/implement/: SKILL.md
.claude/skills/issue/: SKILL.md
context/product/: architecture.md  product-definition.md  roadmap.md
context/spec/001-mixed-mic-system-audio-capture/: functional-spec.md  tasks.md  technical-considerations.md
context/spec/002-primary-display-video-capture/: functional-spec.md  tasks.md  technical-considerations.md
scripts/: ensure-signing-cert.sh
src/record/: capture.py  cli.py  combine.py  config.py  control.py  daemon.py  feedback.py  hotkey.py  ipc.py  launchagent.py  logging_setup.py  naming.py  paths.py  secrets.py  state.py  supervisor.py  transcribe.py
swift-capture/: Info.plist  Package.swift
tests/integration/: _real_capture_helpers.py  conftest.py  test_end_to_end.py  test_real_capture.py  test_session_naming.py  test_two_track_audio.py
tests/manual/: verify_exit_codes.sh
tests/python/: conftest.py  test_cli.py  test_combine.py  test_config.py  test_control.py  test_daemon.py  test_feedback.py  test_hotkey.py  test_ipc.py  test_launchagent.py  test_naming.py  test_paths.py  test_secrets.py  test_state.py  test_transcribe.py
(+68 files in other folders)
