[project]
name = "record"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "pydantic",
    "pydantic-settings",
    "structlog",
]

[project.scripts]
record = "record.cli:app"

[dependency-groups]
dev = ["pytest>=8", "psutil>=5.9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
